# toolsmechta

./: .gitignore  LICENSE  README.md  index.html
miniscript/: images.jfif  index.html  mechta_coshka.js
miniscript/PREV/GSM/: 28.10.2023-11.08.html  28.10.2023-14.09.html
miniscript/PREV/KBT/: kbt-10.02.2023-14.40.html  kbt-12.02.2023-11.11.html  kbt-13.02.2023-11.47.html  print 03.01.2023-9.08.html
miniscript/PREV/MBT/: 06.01.2023-9.15.html  1.01.2023-12.38.html  mbt-13.02.2023-11.49.html  mbt-13.02.2023-9.51.html
miniscript/PREV/MBT-KBT-sop/: 04.12.22-19.23.html  05.12.22-15.27.html  19.12.2022-10.46 сапутка.html  20.12.2022-9.09.html  26.12.2022-9.19.html  sop-08.02.2023-17.16.html  sop-12.02.2023-11.16.html  sop-13.02.2023-12.56.html
miniscript/PREV/Устаревшие/KBT/: 30.11.22 10.3kbt.html  KBT 14.01.2023-11.10.html  kbt-03.02.2023-9.19.html  kbt-04.02.2023-11.09.html  kbt-05.02.2023-11.11.html  kbt-06.02.2023-10.52.html  kbt-06.02.2023-16.05.html  kbt-06.02.2023-18.24.html  kbt-06.02.2023-9.46.html  kbt-07.02.2023-9.38.html  kbt-08.02.2023-10.18.html  kbt-08.02.2023-17.18.html  kbt-10.02.2023-9.40.html  kbt-15.01.2023-11.11.html  kbt-16.01.2023-9.15.html  (+109 more)
miniscript/source/: interface.js  mechta_coshka.js
shell-fetch_counter/: CMakeLists.txt  check-counter.sh  fetch.db  fetch_gsm.db  fetch_kbt.db  fetch_mbt.db  shell-fetch_counter.cpp
shell-fetch_counter/shell-fetch_counter-sources/: CMakeLists.txt  shell-fetch_counter.cpp
source/: interface.js  jq.min.js  mbo_tar.xcf  md5.js  mechta_coshka.js  style.css  ui.js
source/models/: cat-eat.xcf
(+101 files in other folders)
